--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Agency site</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel='stylesheet' type='text/css' media='screen' href='reset.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./styles/style.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -65,13 +64,13 @@
                 We have been working with some Fortune 500+ clients
             </p>
             <div class="logosGrid">
-                <img src="images/Logo (1).png" alt="logo" class="img-logo">
-                <img src="images/Logo (2).png" alt="logo" class="img-logo">
-                <img src="images/Logo (3).png" alt="logo" class="img-logo">
-                <img src="images/Logo.png" alt="logo" class="img-logo">
-                <img src="images/Logo (5).png" alt="logo" class="img-logo">
-                <img src="images/Logo (6).png" alt="logo" class="img-logo">
-                <img src="images/Logo (7).png" alt="logo" class="img-logo">
+                <img src="images/Logo (1).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo (2).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo (3).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo.png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo (5).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo (6).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
+                <img src="images/Logo (7).png" alt="logo" class="img-logo" data-aos="fade-in" data-aos-delay="600">
             </div>
         </div>
     </section>
